[tool.poetry]
name = "guide-myui"
version = "0.1.0"
description = ""
authors = ["Ken Lee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-fasthtml = "^0.4.3"
google-cloud-aiplatform = "^1.62.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
